2009-09-25  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with gtkmm < 2.18.
	
	* glom/utility_widgets/flowtable.cc: Correct the use of 
	GTKMM_MINOR_VERSION to fix the build with older gtkmm versions.

1.12.0:

2009-09-25  Murray Cumming  <murrayc@murrayc.com>

	Command spawning: Really check the return value.

	* glom/libglom/spawn_with_feedback.cc:
	execute_command_line_and_wait_until_second_command_returns_success():
	Actually check the return value of the first command, so we can fail 
	immediately (with stderr output) when, for instance, postgresql 
	fails to read the configuration file due to changed options, such as 
	no longer recognizing max_fsm_pages in PostgreSQL 8.4

2009-09-25  Murray Cumming  <murrayc@murrayc.com>

	Replace some NULLs with 0 because this is C++, not C.

	* glom/libglom/connectionpool_backends/postgres.cc:
	* glom/libglom/connectionpool_backends/postgres_self.cc:
	* glom/libglom/spawn_with_feedback.cc: Replace NULLs with 0.

2009-09-25  Murray Cumming  <murrayc@murrayc.com>

	Maemo: Fix the non-exceptions build again.
	
	* glom/print_layout/canvas_print_layout.cc: Added ifdefs around KeyFile 
	calls. I wonder why I only noticed this now.

2009-09-24  Murray Cumming  <murrayc@murrayc.com>

	Self-Hosting: Use the new ident configuration for PostgreSQL 8.4.

	* glom/libglom/spawn_with_feedback.[h|cc]: Added an 
	execute_command_line_and_wait() overload that has an output parameter 
	for the stdout from the command.
	* glom/libglom/connectionpool_backends/postgres_self.[h|cc]:
	Added a get_postgresql_utils_version_as_number() utiltity method, 
	and use it in set_network_shared() to use a different syntax for 
	Postgres 8.4, hopefully fixing bug #595608 (Fryderyk Dziarmagowski)

2009-09-24  Murray Cumming  <murrayc@murrayc.com>

	Self-Hosting: Retry the connection just-long-enough.

	* glom/libglom/connectionpool_backends/postgres.[h|cc]: attempt_connect(): 
	Add a throw() declaration because we know that this really never throws, 